[package]
name = "actix-web-server"
version = "0.1.0"
authors = ["jkcomment <jkcomment@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }